--- a/WhiteWineAnalysis.Rmd
+++ b/WhiteWineAnalysis.Rmd
@@ -358,18 +358,6 @@ ggcorr(ww, palette = "RdBu", labels = TRUE)
 
 We can see that density and residual sugar has very strong correlation. I am not able to ajust the labelling of this plot. 
 
-```{r Psych Scatter Matrix}
-
-pairs.panels(ww, 
-             method = "pearson", # correlation method
-             hist.col = "#00AFBB",
-             density = TRUE,  # show density plots
-             ellipses = TRUE # show correlation ellipses
-             )
-
-ggcorr(ww, palette = "RdBu", labels = TRUE)
-```
-
 Now I am going to plot scatter plots to analyse relationship between our feature of focus(quality) and chemical properties. I will also be jittering these plots to give a better perspective. 
 
 ```{r Quality vs Alcohol Scatter}
@@ -877,18 +865,12 @@ saq <- ggplot(aes(x = alcohol, y = quality), data = ww) +
   ylab("Quality score (0 to 10)") +
   ggtitle("Scatterplot of Alcohol Level vs Quality") +
   scale_x_continuous(breaks = seq(8,14,1))
-bqa <- qplot(x = as.factor(quality), y = alcohol,
-             data = ww,
-             geom = 'boxplot') +
-  xlab("Quality score (0 to 10)") +
-  ylab("Alcohol level (% by volume)") +
-  ggtitle("Boxplot of Alcohol level vs Quality") +
-  scale_y_continuous(breaks = seq(8,14,1))
-grid.arrange(saq,bqa)
+
+grid.arrange(saq)
 ```
 
 
-The strongest correlation observed between the feature of interest and any other feature was with alcohol at 0.436. This relationship can be visualised using the above chart. We can see that the concentration of points is increasing from left to right. That means as alcohol level increases quality also increases. Taking a closer look at th box plot we realise that the increasing trend is not steady. Between quality 3 and 5 it is a negative relationship. It is also safe to assume that after 12.5% alcohol content the quality of wine will decrease because the alcohol taste will overpower the native wine taste.
+The strongest correlation observed between the feature of interest and any other feature was with alcohol at 0.436. This relationship can be visualised using the above chart. We can see that the concentration of points is increasing from left to right. That means as alcohol level increases quality also increases. It is also safe to assume that after 12.5% alcohol content the quality of wine will decrease because the alcohol taste will overpower the native wine taste.
 
 ## Final Plot 3
 
